# FREEQUENCY

./: .gitignore  CMakeLists.txt  README.md  build.bat  install.bat
.github/workflows/: build.yml  release.yml
design/figma/: 01-ui-guide-spotlight.js  02-ui-guide-callout.js  03-ui-guide-fly-beam.js  04-ui-guide-extras.js
docs/: ARCHITECTURE.md  PRODUCT_VISION.md
packaging/: freequency-mime.xml  freequency.desktop  install-linux.sh
packaging/linux/: build-packages.sh
packaging/macos/: create-dmg.sh
packaging/windows/: freequency.iss  install-portable.ps1
scripts/: build.bat  build.ps1  build.sh  package.bat  package.ps1  package.sh  run.bat
src/: CMakeLists.txt  Main.cpp
src/Core/: Types.h
src/DSP/: BuiltinEffects.cpp  BuiltinEffects.h  LimiterProcessor.cpp  LimiterProcessor.h  RtElasticStretch.cpp  RtElasticStretch.h  SynthProcessor.cpp  SynthProcessor.h  TimeStretch.cpp  TimeStretch.h
src/Engine/: AudioClipProcessor.cpp  AudioClipProcessor.h  AudioClipSnapshot.h  AudioEngine.cpp  AudioEngine.h  AutomationSnapshot.h  CompSwipeMixer.cpp  CompSwipeMixer.h  LimiterProcessor.cpp  LimiterProcessor.h  MetronomeProcessor.cpp  MetronomeProcessor.h  MidiSequenceSnapshot.h  MidiSourceProcessor.cpp  MidiSourceProcessor.h  PluginManager.cpp  PluginManager.h  PortamentoExpander.cpp  PortamentoExpander.h  PreviewProcessor.h  RtElasticStretch.cpp  RtElasticStretch.h  SnapshotHolder.h  SynthProcessor.cpp  SynthProcessor.h  TrackProcessor.cpp  TrackProcessor.h  Transport.h  VariAudioResynth.cpp  VariAudioResynth.h  WarpBake.cpp  WarpBake.h  WarpMapper.cpp  WarpMapper.h
src/Models/: AudioTrack.cpp  AudioTrack.h  AutomationCurve.h  BusTrack.h  Clip.cpp  Clip.h  HarmonicEdit.h  MidiTrack.cpp  MidiTrack.h  Mixer.cpp  Mixer.h  Pattern.cpp  Pattern.h  PatternExpander.cpp  PatternExpander.h  Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h  Timeline.cpp  Timeline.h  Track.cpp  Track.h  VCATrack.h
src/UI/: AppearancePanel.cpp  AppearancePanel.h  ArrangeView.cpp  ArrangeView.h  ChannelStrip.cpp  ChannelStrip.h  FreequencyLookAndFeel.cpp  FreequencyLookAndFeel.h  FrequencyFieldEditor.cpp  FrequencyFieldEditor.h  MainComponent.cpp  MainComponent.h  MediaBrowser.cpp  MediaBrowser.h  MixerView.cpp  MixerView.h  OmniLookAndFeel.cpp  OmniLookAndFeel.h  PianoRollEditor.cpp  PianoRollEditor.h  PlayheadOverlay.h  PluginEditorWindow.h  SpectrumAnalyzer.h  StatusBar.h  Theme.cpp  Theme.h  TimelineRuler.cpp  TimelineRuler.h  TrackHeaderComponent.cpp  TrackHeaderComponent.h  TrackLaneComponent.cpp  TrackLaneComponent.h  TransportBar.cpp  TransportBar.h  UIContext.h  UiGuideController.cpp  UiGuideController.h  UiGuideOverlay.cpp  UiGuideOverlay.h  UiGuideTypes.cpp  (+1 more)
